build adjusted for intents

--- a/Dockerfile.armv7
+++ b/Dockerfile.armv7
@@ -27,12 +27,16 @@ COPY irene/__init__.py irene/__init__.py
 COPY configs/ configs/
 COPY pyproject.toml pyproject.toml
 
+# Copy intent handlers and JSON configurations for validation
+COPY irene/intents/handlers/ irene/intents/handlers/
+COPY schemas/ schemas/
+
 # Build argument for configuration profile selection
 ARG CONFIG_PROFILE=embedded-armv7
 ENV CONFIG_PROFILE=${CONFIG_PROFILE}
 
-# Install tomllib for Python < 3.11 compatibility
-RUN pip install tomli
+# Install tomllib for Python < 3.11 compatibility and jsonschema for JSON validation
+RUN pip install tomli jsonschema
 
 # Runtime analysis of selected configuration profile
 RUN echo "🔍 Analyzing configuration profile: ${CONFIG_PROFILE}" && \
@@ -41,6 +45,36 @@ RUN echo "🔍 Analyzing configuration profile: ${CONFIG_PROFILE}" && \
     --platform alpine \
     --json > /tmp/build-requirements.json && \
     echo "📋 Build requirements generated successfully"
+
+# Validate intent JSON configurations if intents are enabled
+RUN echo "🔍 Validating intent JSON configurations..." && \
+    python -c "
+import json
+import sys
+try:
+    with open('/tmp/build-requirements.json', 'r') as f:
+        data = json.load(f)
+    intent_files = data.get('intent_json_files', [])
+    if intent_files:
+        print(f'Found {len(intent_files)} intent JSON files to validate')
+        import subprocess
+        result = subprocess.run([
+            'python', '-m', 'irene.tools.intent_validator', 
+            '--validate-all', '--quiet'
+        ], capture_output=True, text=True)
+        if result.returncode != 0:
+            print('❌ Intent JSON validation failed:', file=sys.stderr)
+            print(result.stdout, file=sys.stderr)
+            print(result.stderr, file=sys.stderr)
+            sys.exit(1)
+        else:
+            print('✅ Intent JSON validation passed')
+    else:
+        print('📋 No intent handlers enabled, skipping JSON validation')
+except Exception as e:
+    print(f'⚠️ Intent validation check failed: {e}', file=sys.stderr)
+    # Continue build - validation issues will be caught later
+" && echo "📋 Intent validation completed"
 
 # Extract Alpine-specific dependencies using dynamic metadata queries
 RUN python -c "
@@ -159,6 +193,9 @@ ENV PATH="/root/.local/bin:$PATH"
 # Copy application code (selective copying based on enabled modules)
 COPY irene/ irene/
 COPY configs/ configs/
+
+# Copy schemas for intent JSON validation at runtime
+COPY schemas/ schemas/
 
 # Copy specific configuration profile for runtime
 COPY --from=analyzer configs/${CONFIG_PROFILE}.toml /app/runtime-config.toml
