--- a/Dockerfile.armv7
+++ b/Dockerfile.armv7
@@ -42,7 +42,7 @@ RUN pip install tomli jsonschema
 RUN echo "🔍 Analyzing configuration profile: ${CONFIG_PROFILE}" && \
     python -m irene.tools.build_analyzer \
     --config configs/${CONFIG_PROFILE}.toml \
-    --platform alpine \
+    --platform linux.alpine \
     --json > /tmp/build-requirements.json && \
     echo "📋 Build requirements generated successfully"
 
