--- a/configs/full.toml
+++ b/configs/full.toml
@@ -104,7 +104,7 @@ fallback_providers = []
 # Cascading provider coordination (JSON donation system)
 enabled = true
 confidence_threshold = 0.7
-provider_cascade_order = ["keyword_matcher", "spacy_rules_sm", "spacy_semantic_md", "rule_based"]
+provider_cascade_order = ["hybrid_keyword_matcher", "spacy_nlu"]
 fallback_intent = "conversation.general"
 
 # JSON donation system integration
@@ -147,18 +147,10 @@ confidence_threshold = 0.8
 min_pattern_length = 2
 max_pattern_combinations = 100
 
-[components.nlu.providers.rule_based]
-enabled = true
-provider_class = "RuleBasedNLUProvider"
-confidence_threshold = 0.7
-default_confidence = 0.8
-fallback_intent = "conversation.general"
-
-[components.nlu.providers.spacy_rules_sm]
+[components.nlu.providers.spacy_nlu]
 enabled = true
 provider_class = "SpaCyNLUProvider"
 model_name = "ru_core_news_sm"
-model_approach = "morphological_rules"
 auto_download = true
 confidence_threshold = 0.7
 morphology_expansion = true
@@ -167,13 +159,7 @@ batch_processing = false
 max_doc_length = 1000
 enable_pipeline_caching = true
 
-[components.nlu.providers.spacy_semantic_md]
-enabled = true
-provider_class = "SpaCyNLUProvider"
-model_name = "ru_core_news_md"
-model_approach = "semantic_similarity"
-auto_download = true
-confidence_threshold = 0.7
+
 semantic_similarity_threshold = 0.8
 vector_similarity = true
 batch_processing = false
